# shipcast

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.toml  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: architecture.md  security.md  testing.md
docs/: PRD.md
docs/architecture/: shipcast_architecture_review.md
docs/qa/: shipcast_e2e_runbook.md  shipcast_implementation_plan.md  shipcast_test_cases.md
docs/use-cases/: shipcast_use_cases.md
projects/_template/: input.yaml  manifest.json
src/shipcast/: __init__.py  __main__.py  audio.py  cli.py  config.py  cost.py  errors.py  locking.py  logging_setup.py  manifest.py  paths.py  project.py  prompts.py  schemas.py  stage.py  subagent_json.py
tests/: _fakestage.py  _race_driver.py  conftest.py
tests/integration/: test_cost_cap.py  test_full_pipeline_smoke.py  test_human_gate.py  test_rerun_reset.py  test_s01_pick.py  test_s02_enrich.py  test_s03_brand.py  test_s04_plan.py  test_s05_script.py  test_s06_video_assets.py  test_s07_voice.py  test_s08_video.py  test_s09_carousel.py  test_s09_graphics.py  test_s10_copy.py  test_s11_package.py
tests/unit/: test_base_stage.py  test_brand_extractor.py  test_captions_modes.py  test_changelog_parser.py  test_cli_dispatch.py  test_code_screenshot.py  test_cost_ledger.py  test_errors_gaps.py  test_ffmpeg_assembly.py  test_ffmpeg_client_gaps.py  test_ffmpeg_kenburns.py  test_gemini_multimodal.py  test_hooks_catalog.py  test_input_validation.py  test_inputs_hash_drift.py  test_locking.py  test_logging.py  test_manifest.py  test_manifest_hashes.py  test_package_imports.py  test_palette_conformance.py  test_paths_and_locking_gaps.py  test_project_errors.py  test_prompts.py  test_s01_pick.py  test_s02_enrich_helpers.py  test_s03_brand_stage.py  test_s06_video_assets_helpers.py  test_s07_voice_errors.py  test_s08_caption_mode.py  test_s08_video_helpers.py  test_settings_secrets.py  test_storyboard_beat_schema.py  test_subagents.py  test_veo_client.py  (+1 more)
(+50 files in other folders)
